--- a/samples/sample2-random-divs.html
+++ b/samples/sample2-random-divs.html
@@ -39,7 +39,7 @@ $(document).ready(function (e) {
 
     //This is where the magic happends!!!
     //Add css set to none because I added display:block;position:absolute; to the css.
-    $('.parti').startMoving({ addCss: false });
+    $('.parti').movingBubble({ addCss: false });
 });
 </script>
 </head>
