--- a/samples/sample1-fish.html
+++ b/samples/sample1-fish.html
@@ -26,6 +26,7 @@
 </script>
 </head>
 <body>
+	<div>456</div>
 <img src="visje.gif" class="fish" alt="Fish 1" />
 <img src="visje.gif" class="fish" alt="Fish 2" />
 <img src="visje.gif" class="fish" alt="Fish 3" />
